<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/TextViewHeadingScreen1"
        android:layout_width="264dp"
        android:layout_height="38dp"
        android:text="@string/borda_s_method"
        android:textAlignment="center"
        android:textColor="#FF9800"
        android:textColorLink="#FF9800"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/ButtonAddVote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:clickable="false"
        android:text="@string/add_a_vote"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.863"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextOptions"
        app:layout_constraintVertical_bias="0.016" />

    <TextView
        android:id="@+id/TextViewOptionsNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_options"
        app:layout_constraintBottom_toTopOf="@+id/TextViewOptions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.731" />

    <TextView
        android:id="@+id/TextViewOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/voting_options"
        app:layout_constraintBottom_toTopOf="@+id/EditTextOptions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.893" />

    <EditText
        android:id="@+id/EditTextOptionsNumber"
        android:layout_width="44dp"
        android:layout_height="41dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="number"
        android:autofillHints=""
        android:hint="@string/_0"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.775"
        app:layout_constraintStart_toEndOf="@+id/TextViewOptionsNumber"
        app:layout_constraintTop_toBottomOf="@+id/TextViewHeadingScreen1"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/EditTextOptions"
        android:layout_width="375dp"
        android:layout_height="107dp"
        android:layout_marginTop="140dp"
        android:autofillHints=""
        android:background="#B5FFEB3B"
        android:ems="10"
        android:hint="@string/enter_all_options_separated_by_comma"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextViewHeadingScreen1"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/ButtonStartOver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:text="@string/start_over"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ButtonAddVote"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextOptions"
        app:layout_constraintVertical_bias="0.016" />

    <TextView
        android:id="@+id/TextViewVotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="28dp"
        android:text="@string/number_of_votes_so_far"
        app:layout_constraintBottom_toTopOf="@+id/ButtonStartOver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextOptions" />

    <TextView
        android:id="@+id/TextViewVotesNumber"
        android:layout_width="110dp"
        android:layout_height="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:background="#D3FFC107"
        android:text="@string/_0"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/ButtonAddVote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.626"
        app:layout_constraintStart_toEndOf="@+id/TextViewVotes"
        app:layout_constraintTop_toBottomOf="@+id/EditTextOptions"
        app:layout_constraintVertical_bias="1.0" />

    <Switch
        android:id="@+id/SwitchResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/show_voting_results"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextOptions"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/TexViewResults"
        android:layout_width="362dp"
        android:layout_height="189dp"
        android:layout_marginTop="10dp"
        android:background="#B96D6969"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SwitchResults"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>